--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 .wrapper {
     display: flex;
     justify-content: center;
@@ -17,8 +21,9 @@
     margin-top: 50px;
 }
 
-.display {
+.displayRes {
     display: flex;
+    flex-direction: column;
     border: solid;
     border-color: black;
     border-width: 2px;
@@ -28,11 +33,28 @@
     /* flex: 1; */
 }
  .buttons {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
     width: 350px;
     height: 375px;
     border: solid;
     border-color: black;
     border-width: 2px;
     margin-bottom: 30px;
+ }
+
+ .lastValue, .display {
+    height: 20px;
+    padding: 3px;
+    margin: 2px;
+    text-align: right;
+ }
+
+ .lastValue {
+    font-size: small;
+ }
+
+ .span2{
+    grid-column: span 2;
  }
