--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: bisque;
 }
 
 .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 230px;
 }
 
 .calculator {
@@ -19,6 +21,7 @@
     width: 400px;
     height: 500px;
     margin-top: 50px;
+    background-color: darkslategray;
 }
 
 .displayRes {
@@ -30,7 +33,7 @@
     margin: 30px;
     width: 350px;
     height: 75px;
-    /* flex: 1; */
+    background-color: darkolivegreen;
 }
  .buttons {
     display: grid;
@@ -39,16 +42,32 @@
     width: 350px;
     height: 375px;
     border: solid;
-    border-color: black;
+    background-color: darkslategray;
+    border-color:darkslategray;
     border-width: 2px;
     margin-bottom: 30px;
  }
+
+ button {
+    background-color: black;
+    color: aliceblue;
+    margin: 0.5px;
+    border-color: black;
+    transition: all 0.1s;
+    cursor: pointer;
+ }
+
+ button:hover{
+    transform: translate3d(0px, -2px, 0px);
+    background-color: rgb(121, 127, 116);
+}
 
  .lastValue, .display {
     height: 20px;
     padding: 3px;
     margin: 2px;
     text-align: right;
+    background-color: darkolivegreen;
  }
 
  .lastValue {
@@ -57,4 +76,8 @@
 
  .span2{
     grid-column: span 2;
+ }
+
+ .calculator, .displayRes, .buttons, button{
+    border-radius: 10px;
  }
